Fixed bug: message overlaps topbar buttons

--- a/src/client/styles/components/TopNavigation.scss
+++ b/src/client/styles/components/TopNavigation.scss
@@ -1,8 +1,11 @@
 
 .topbar--button-container {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
   a {
     img {
-      margin: 8px 0px 0px 0px;
+      //margin: 8px 0px 0px 0px;
     }
   }
 }
